force-app/main/default/objects/Account/fields/Contact_Household__c.field-meta.xml
<CustomField>
    <fullName>Contact_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Household</label>
    <type>Checkbox</type>
</CustomField>