force-app/main/default/objects/Account/fields/Household_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Household_Clinic__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Household Clinic</label>
    <referenceTo>Clinics__c</referenceTo>
    <relationshipLabel>Households</relationshipLabel>
    <relationshipName>Households</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>