force-app/main/default/objects/Account/fields/Household_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Household_Doctor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Household Doctor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Doctor__c.Internal_Doctor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Households</relationshipLabel>
    <relationshipName>Households</relationshipName>
    <type>Lookup</type>
</CustomField>