force-app/main/default/objects/Account/fields/Import_Patient_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Import_Patient_ID_Number__c</fullName>
    <label>Import Patient ID Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>