force-app/main/default/objects/Account/recordTypes/Contact.recordType-meta.xml
<RecordType>
    <fullName>Contact</fullName>
    <active>true</active>
    <label>Contact Account (Use for External Contacts)</label>
</RecordType>