force-app/main/default/objects/Account/recordTypes/Regular_Patient_Household.recordType-meta.xml
<RecordType>
    <fullName>Regular_Patient_Household</fullName>
    <active>true</active>
    <label>Regular Patient Household</label>
</RecordType>